[tool.black]
line-length = 79
skip-string-normalization = true

[tool.poetry]
name = "streaming-form-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.6b0"
Cython = "^0.29.27"
flake8 = "^3.9.2"
mypy = "^0.910"
numpy = "^1.22.1"
pytest = "^6.2.5"
requests-toolbelt = "^0.9.1"
twine = "^3.7.1"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
